syntax = "proto3";
package vtr;

option go_package = "github.com/advait/vtrpc/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service VTR {
  // Session management
  rpc Spawn(SpawnRequest) returns (SpawnResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc SubscribeSessions(SubscribeSessionsRequest) returns (stream SessionsSnapshot);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Kill(KillRequest) returns (KillResponse);
  rpc Close(CloseRequest) returns (CloseResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Rename(RenameRequest) returns (RenameResponse);
  
  // Screen operations
  rpc GetScreen(GetScreenRequest) returns (GetScreenResponse);
  rpc Grep(GrepRequest) returns (GrepResponse);
  
  // Input operations
  rpc SendText(SendTextRequest) returns (SendTextResponse);
  rpc SendKey(SendKeyRequest) returns (SendKeyResponse);
  rpc SendBytes(SendBytesRequest) returns (SendBytesResponse);
  rpc Resize(ResizeRequest) returns (ResizeResponse);
  
  // Blocking operations
  rpc WaitFor(WaitForRequest) returns (WaitForResponse);
  rpc WaitForIdle(WaitForIdleRequest) returns (WaitForIdleResponse);
  
  // Streaming (for attach/web UI)
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeEvent);
  
  // Recording (P2)
  rpc DumpAsciinema(DumpAsciinemaRequest) returns (DumpAsciinemaResponse);

  // Federation
  rpc Tunnel(stream TunnelFrame) returns (stream TunnelFrame);
}

// Session status enum
enum SessionStatus {
  SESSION_STATUS_UNSPECIFIED = 0;
  SESSION_STATUS_RUNNING = 1;
  SESSION_STATUS_CLOSING = 2;
  SESSION_STATUS_EXITED = 3;
}

// Session represents a PTY session with an immutable ID and mutable label.
message Session {
  string name = 1;
  SessionStatus status = 2;
  int32 cols = 3;
  int32 rows = 4;
  int32 exit_code = 5;  // only valid when status = EXITED
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp exited_at = 7;  // only valid when status = EXITED
  bool idle = 8;
  uint32 order = 9;
  string id = 10;
}

message SessionRef {
  string id = 1;
  string coordinator = 2;
}

// Session management messages
message SpawnRequest {
  string name = 1;
  string command = 2;  // default: server default shell (config or $SHELL)
  string working_dir = 3;  // default: $HOME
  map<string, string> env = 4;  // merged with default env
  int32 cols = 5;  // default: 80
  int32 rows = 6;  // default: 24
}

message SpawnResponse {
  Session session = 1;
}

message ListRequest {}

message ListResponse {
  repeated Session sessions = 1;
}

message SubscribeSessionsRequest {
  bool exclude_exited = 1;
}

// Federation messages
message SpokeInfo {
  string name = 1;
  map<string, string> labels = 3;
  string version = 4;
  reserved 2;
  reserved "grpc_addr";
}

message TunnelFrame {
  string call_id = 2;
  oneof kind {
    TunnelHello hello = 10;
    TunnelRequest request = 11;
    TunnelResponse response = 12;
    TunnelStreamEvent event = 13;
    TunnelCancel cancel = 14;
    TunnelError error = 15;
    TunnelTraceBatch trace = 16;
  }
  reserved 1;
  reserved "spoke_name";
}

message TunnelHello {
  string version = 1;
  map<string, string> labels = 2;
  string name = 3;
}

message TunnelRequest {
  string method = 1;
  bytes payload = 2;
  bool stream = 3;
  string trace_parent = 4;
  string trace_state = 5;
  string baggage = 6;
}

message TunnelResponse {
  bytes payload = 1;
  bool done = 2;
}

message TunnelStreamEvent {
  bytes payload = 1;
}

message TunnelCancel {
  string reason = 1;
}

message TunnelError {
  int32 code = 1;
  string message = 2;
}

message TunnelTraceBatch {
  bytes payload = 1;
}

message CoordinatorSessions {
  string name = 1;
  string path = 2;
  repeated Session sessions = 3;
  string error = 4;
}

message SessionsSnapshot {
  repeated CoordinatorSessions coordinators = 1;
}

message InfoRequest {
  SessionRef session = 1;
}

message InfoResponse {
  Session session = 1;
}

message KillRequest {
  SessionRef session = 1;
  string signal = 2;  // TERM, KILL, INT; default: TERM
}

message KillResponse {}

message CloseRequest {
  SessionRef session = 1;
}

message CloseResponse {}

message RemoveRequest {
  SessionRef session = 1;
}

message RemoveResponse {}

message RenameRequest {
  SessionRef session = 1;
  string new_name = 2;
}

message RenameResponse {}

// Screen operations messages
message GetScreenRequest {
  SessionRef session = 1;
}

message ScreenCell {
  string char = 1;
  int32 fg_color = 2;  // RGB packed
  int32 bg_color = 3;  // RGB packed
  uint32 attributes = 4;  // bold=0x01, italic=0x02, underline=0x04, etc.
}

message ScreenRow {
  repeated ScreenCell cells = 1;
}

message GetScreenResponse {
  string name = 1;
  int32 cols = 2;
  int32 rows = 3;
  int32 cursor_x = 4;
  int32 cursor_y = 5;
  repeated ScreenRow screen_rows = 6;
  string id = 7;
}

message GrepRequest {
  SessionRef session = 1;
  string pattern = 2;  // regex (RE2)
  int32 context_before = 3;
  int32 context_after = 4;
  int32 max_matches = 5;  // default: 100
}

message GrepMatch {
  int32 line_number = 1;  // 0-based, relative to scrollback start
  string line = 2;
  repeated string context_before = 3;
  repeated string context_after = 4;
}

message GrepResponse {
  repeated GrepMatch matches = 1;
}

// Input operations messages
message SendTextRequest {
  SessionRef session = 1;
  string text = 2;
}

message SendTextResponse {}

message SendKeyRequest {
  SessionRef session = 1;
  string key = 2;  // enter, tab, escape, up, down, left, right, backspace, delete, ctrl+c, etc.
}

message SendKeyResponse {}

message SendBytesRequest {
  SessionRef session = 1;
  bytes data = 2;
}

message SendBytesResponse {}

message ResizeRequest {
  SessionRef session = 1;
  int32 cols = 2;
  int32 rows = 3;
}

message ResizeResponse {}

// Blocking operations messages
message WaitForRequest {
  SessionRef session = 1;
  string pattern = 2;  // regex (RE2), matches output after request starts
  google.protobuf.Duration timeout = 3;  // overall deadline
}

message WaitForResponse {
  bool matched = 1;
  string matched_line = 2;
  bool timed_out = 3;
}

message WaitForIdleRequest {
  SessionRef session = 1;
  google.protobuf.Duration idle_duration = 2;  // default: 5s of silence
  google.protobuf.Duration timeout = 3;  // overall deadline
  bool include_screen = 4;  // include screen snapshot when idle is reached
}

message WaitForIdleResponse {
  bool idle = 1;
  bool timed_out = 2;
  GetScreenResponse screen = 3;
}

// Streaming messages
message SubscribeRequest {
  SessionRef session = 1;
  bool include_screen_updates = 2;
  bool include_raw_output = 3;
}

message ScreenUpdate {
  uint64 frame_id = 1;
  uint64 base_frame_id = 2;  // 0 for keyframes
  bool is_keyframe = 3;
  GetScreenResponse screen = 4;  // full snapshot when is_keyframe
  ScreenDelta delta = 5;  // row-level deltas when !is_keyframe
}

message ScreenDelta {
  int32 cols = 1;
  int32 rows = 2;
  int32 cursor_x = 3;
  int32 cursor_y = 4;
  repeated RowDelta row_deltas = 5;  // full-row replacements
}

message RowDelta {
  int32 row = 1;  // 0-based row index
  ScreenRow row_data = 2;  // full row after update
}

message SessionExited {
  int32 exit_code = 1;
  string id = 2;
}

message SessionIdle {
  string name = 1;
  bool idle = 2;
  string id = 3;
}

message SubscribeEvent {
  oneof event {
    ScreenUpdate screen_update = 1;
    bytes raw_output = 2;
    SessionExited session_exited = 3;
    SessionIdle session_idle = 4;
  }
}

// Recording messages (P2)
message DumpAsciinemaRequest {
  SessionRef session = 1;
}

message DumpAsciinemaResponse {
  bytes data = 1;  // asciinema v2 format
}
